fix: add x space on mobile view

--- a/frontend/src/assets/styles/layouts/_home-page.scss
+++ b/frontend/src/assets/styles/layouts/_home-page.scss
@@ -260,6 +260,7 @@ header.sticky {
   font-weight: 900;
 
   .nav-item {
+    padding: 0 .5rem;
     @include media-breakpoint-up(md) {
       padding: 0 1.5rem;
       &:last-child {
